--- a/Integradora/Trabajos Anteriores.html
+++ b/Integradora/Trabajos Anteriores.html
@@ -1,7 +1,8 @@
     <section id="trabajos">
         <h2>Trabajos Anteriores</h2>
         <div class="work">
-            <img src="trabajo1.jpg" alt="Trabajo 1">
+            <h2>Privada El Marquez</h2>
+            <img src="assets/WhatsApp Image 2024-09-09 at 7.30.40 PM.jpeg" alt="Trabajo 1">
         </div>
         <div class="work">
             <img src="trabajo2.jpg" alt="Trabajo 2">
