--- a/Integradora/Trabajos Anteriores.html
+++ b/Integradora/Trabajos Anteriores.html
@@ -2,7 +2,8 @@
         <h2>Trabajos Anteriores</h2>
         <div class="work">
             <h2>Privada El Marquez</h2>
-            <img src="assets/WhatsApp Image 2024-09-09 at 7.30.40 PM.jpeg" alt="Trabajo 1">
+            <img src="assets/WhatsApp Image 2024-09-09 at 7.30.40 PM.jpeg" alt="Trabajo 1" width="250" height="160">
+            <p>Este proyecto consiste en la construcción de un fraccionamiento privado</p>
         </div>
         <div class="work">
             <img src="trabajo2.jpg" alt="Trabajo 2">
