--- a/Integradora/Trabajos Anteriores.html
+++ b/Integradora/Trabajos Anteriores.html
@@ -8,4 +8,5 @@
         <div class="work">
             <img src="trabajo2.jpg" alt="Trabajo 2">
         </div>
+    <p><button onclick="window.history.back()">Volver</button></p>
     </section>
