--- a/Integradora/Servicios.html
+++ b/Integradora/Servicios.html
@@ -4,4 +4,5 @@
             <h3>Consultoría</h3>
             <p>Asesoría personalizada .</p>
         </div>
+    <p><button onclick="window.history.back()">Volver</button></p>
     </section>
