--- a/Integradora/index.html
+++ b/Integradora/index.html
@@ -12,7 +12,7 @@
         <nav>
             <h1>CANESA Constructora</h1>
             <ul>
-                <li><a href="Registro.html">Registro</a></li>
+                <li><a href="Registro_cita.html">Citas y Cotizacion</a></li>
                 <li><a href="Servicios.html">Servicios</a></li>
                 <li><a href="Trabajos Anteriores.html">Trabajos Anteriores</a></li>
             </ul>
