--- a/Integradora/index.html
+++ b/Integradora/index.html
@@ -18,10 +18,22 @@
             </ul>
         </nav>    
     </header>
+    <section id="hero">
+        <h2>Bienvenidos a CANESA Constructora</h2>
+        <p>Somos una empresa dedicada a...</p>
+    </section>
     <main>
-        <section id="home">
-            <h2>Bienvenidos a CANESA Constructora</h2>
-            <p>Somos una empresa dedicada a...</p>
+        <section id="servicios">
+            <!-- Contenido de servicios -->
+        </section>
+        <section id="trabajos">
+            <!-- Contenido de trabajos -->
+        </section>
+        <section id="contacto">
+            <!-- Contenido de contacto -->
+        </section>
+        <section id="registro">
+            <!-- Contenido de registro -->
         </section>
     </main>
     <footer>
@@ -31,12 +43,11 @@
             <p><strong>Teléfono:</strong> +52-618-813-01-58</p>
             <p><strong>Teléfono de Oficina:</strong> 811-51-79</p>
             <p><strong>Ubicacion:</strong> Calle Salvador Nava Rdz. 412B</p>
-           <p>Col. Centro CP:34000</p>
+            <p>Col. Centro CP:34000</p>
             <p>Durango, Dgo</p>
         </section>
         <p>© 2024 Marketing & Publicidad. Todos los derechos reservados.</p>
     </footer>
-
     <script src="script.js"></script>
 </body>
 </html>
