--- a/Integradora/index.html
+++ b/Integradora/index.html
@@ -15,6 +15,8 @@
                 <li><a href="Registro_cita.html">Citas y Cotizacion</a></li>
                 <li><a href="Servicios.html">Servicios</a></li>
                 <li><a href="Trabajos Anteriores.html">Trabajos Anteriores</a></li>
+                <li><a href="provedores.html">Provedores</a></li>
+                <li><a href="referencias.html">Referencias Legales</a></li>
             </ul>
         </nav>    
     </header>
