--- a/Integradora/Servicios.html
+++ b/Integradora/Servicios.html
@@ -1,4 +1,5 @@
 <section id="servicios"
+    <p><button onclick="window.history.back()">Volver</button></p>
     <h1>Nuestros Servicios</h1>
         <div class="service">
             <h3>Consultoría</h3>
