--- a/Integradora/referencias.html
+++ b/Integradora/referencias.html
@@ -1,4 +1,5 @@
 <section id="trabajos">
+    <p><button onclick="window.history.back()">Volver</button></p>
     <h2>Referencias Legales </h2>
     <div class="work">
         <h2>ejemplo</h2>
