--- a/Integradora/Registro_cita.html
+++ b/Integradora/Registro_cita.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="styles.css">
 
 <section id="cotizacion">
+    <p><button onclick="window.history.back()">Volver</button></p>
     <center><h2>Solicita una cotización o agenda una cita</h2></center>
     <div class="form-container">
         <form id="cotizacionForm">
