--- a/Integradora/Trabajos Anteriores.html
+++ b/Integradora/Trabajos Anteriores.html
@@ -1,4 +1,6 @@
     <section id="trabajos">
+        <link rel="stylesheet" href="styles.css">
+        <p><button onclick="window.history.back()">Volver</button></p>
         <h2>Trabajos Anteriores</h2>
         <div class="work">
             <h2>Privada El Marquez</h2>
