--- a/Integradora/provedores.html
+++ b/Integradora/provedores.html
@@ -1,4 +1,5 @@
 <h1>Provedores</h1>
+<p><button onclick="window.history.back()">Volver</button></p>
     <div class="Provedores">
         <h3><li>Francisco Cervantes Martinez <p>Celular: 6181664767</p><p>Direccion de correo: fcervantesmtz@gmail.com</p></li></h3>
     </div>
