--- a/Integradora/Servicios.html
+++ b/Integradora/Servicios.html
@@ -1,9 +1,32 @@
-<section id="servicios"
-    <p><button onclick="window.history.back()">Volver</button></p>
-    <h1>Nuestros Servicios</h1>
-        <div class="service">
-            <h3>Consultoría</h3>
-            <p>Asesoría personalizada .</p>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Servicios - Constructora Canese</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <img src="logo.png" alt="Logo Constructora Canese" class="logo">
+        <h2>Registro de Servicios</h2>
+        <table>
+            <tr>
+                <th>Servicio</th>
+                <th>Fecha</th>
+                <th>Cliente</th>
+            </tr>
+            <tr>
+                <td>Construcción</td>
+                <td>2024-10-06</td>
+                <td>Cliente 1</td>
+            </tr>
+        </table>
+        <div>
+            <button>Agregar</button>
+            <button>Actualizar</button>
+            <button>Eliminar</button>
         </div>
-    <p><button onclick="window.history.back()">Volver</button></p>
-    </section>
+    </div>
+</body>
+</html>
