--- a/Integradora/index.html
+++ b/Integradora/index.html
@@ -10,12 +10,18 @@
 <body>
     <header>
         <nav>
-            <h1>CANESA Constructora</h1>
-            <ul>
-                <li><a href="Registro_cita.html">Citas y Cotizacion</a></li>
+            <img id="logo" src="assets/logoweb.png" alt="Logo">
+            <div class="menu-icon" id="menu-icon">
+                <!-- Ícono de hamburguesa -->
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <ul id="menu" class="menu">
+                <li><a href="agendar_cita.html">Citas y Cotización</a></li>
                 <li><a href="Servicios.html">Servicios</a></li>
-                <li><a href="Trabajos Anteriores.html">Trabajos Anteriores</a></li>
-                <li><a href="provedores.html">Provedores</a></li>
+                <li><a href="Inicio_sesion_cliente.html">Login Cliente</a></li>
+                <li><a href="Inicio_sesion_Trabajador.html">Login Trabajador</a></li>
                 <li><a href="referencias.html">Referencias Legales</a></li>
             </ul>
         </nav>    
@@ -44,7 +50,7 @@
             <p><strong>Email:</strong> canesa5@yahoo.com</p>
             <p><strong>Teléfono:</strong> +52-618-813-01-58</p>
             <p><strong>Teléfono de Oficina:</strong> 811-51-79</p>
-            <p><strong>Ubicacion:</strong> Calle Salvador Nava Rdz. 412B</p>
+            <p><strong>Ubicación:</strong> Calle Salvador Nava Rdz. 412B</p>
             <p>Col. Centro CP:34000</p>
             <p>Durango, Dgo</p>
         </section>
