--- a/Integradora/agendar_cita.html
+++ b/Integradora/agendar_cita.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agendar Cita - Constructora Canese</title>
+    <title>Agendar Cita - Constructora CANESA</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <h2>Agendar Cita</h2>
-        <form>
-            <input type="text" placeholder="Nombre completo" required>
-            <input type="email" placeholder="Correo electrónico" required>
-            <input type="date" required>
-            <input type="time" required>
+        <form action="procesar_cita.php" method="post">
+            <input type="text" name="nombre" placeholder="Nombre completo" required>
+            <input type="email" name="email" placeholder="Correo electrónico" required>
+            <input type="date" name="fecha" required>
+            <input type="time" name="hora" required>
             <button type="submit">Agendar</button>
         </form>
     </div>
