--- a/Integradora/public/agendar_cita.html
+++ b/Integradora/public/agendar_cita.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agendar Cita - Constructora CANESA</title>
     <link rel="stylesheet" href="styles.css">
-    <form action="/agendarCita" method="POST">
 </head>
 <body>
     <div class="container">
         <h2>Agendar Cita</h2>
-            <input type="text" name="nombre" placeholder="Nombre completo" required>
-            <input type="email" name="email" placeholder="Correo electrónico" required>
-            <input type="date" name="fecha" required>
-            <input type="time" name="hora" required>
+        <!-- Formulario para agendar cita -->
+        <form action="guardar_datos.php" method="POST">
+            <input type="text" name="nombre" placeholder="Nombre completo" required><br><br>
+            <input type="email" name="correo" placeholder="Correo electrónico" required><br><br>
+            <input type="date" name="fecha" required><br><br>
+            <input type="time" name="hora" required><br><br>
             <button type="submit">Agendar</button>
         </form>
     </div>
